# django-lms

./: README.md  check_code.sh  pyproject.toml
config/: settings.py  urls.py
fixtures/: groups.json  payments.json
lms/: __init__.py  admin.py  celery.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/management/commands/: fill_base.py
lms/migrations/: 0001_initial.py  0002_course_desc_course_image_course_name_lesson_course_and_more.py  0003_alter_lesson_course_payment.py  0004_course_owner_lesson_owner.py  0005_alter_course_desc_alter_course_image_and_more.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers_remove_user_username_user_avatar_and_more.py  0003_alter_user_avatar_alter_user_country_and_more.py
